--- a/charts/tensor-fusion/templates/alert-manager.yaml
+++ b/charts/tensor-fusion/templates/alert-manager.yaml
@@ -1,5 +1,15 @@
 {{- if .Values.alert.enabled }}
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: alert-manager
+  namespace: {{ include "tensor-fusion.namespace" . }}
+  labels:
+    tensor-fusion.ai/component: alert-manager
+    {{- include "tensor-fusion.labels" . | nindent 4 }}
+automountServiceAccountToken: true
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-alert-manager-config
